@@ -218,6 +218,12 @@ $.Autocompleter = function(input, options) {
 		$input.val(v);
 		hideResultsNow();
 		$input.trigger("result", [selected.data, selected.value]);
+		// GEDFact_assistant --------------------
+		if ('modules/GEDFact_assistant/MEDIA/media_1_ctrl.php') {
+			var selname=(removeHTMLTags(selected.value));
+			//alert(selname);
+			addlinks(selname);
+		}
 		return true;
 	}
 	
